-*- org -*-

See https://github.com/sourceruckus/ruckusrd/commits/master for full log.

* v0.19.0
2024-06-ish: RuckusRD v0.19.0 (in development)

- Upgraded all subprojects to latest available versions as of 9/11/23.
- Upgraded microcode, firmware, and zfs to latest version as of 05/24/24.
- Added `sqshfstype` command line arg to linuxrc and fixed bug where
  `rootfstype` was ignored.
- Fixed silly decho -n output bug

* v0.18.0
2022-05-13: RuckusRD v0.18.0

This release is primarily focused on two things: 1) build system overhaul
stemming from splitting utils out into seperate packages, and 2) adding more
comfort (e.g, man pages) and capability (e.g., real fdisk w/ GPT support) to
the initramfs maint shell.  Plus bug-fixes and subproject updates.

- Removed doit, which moved into its own package.
- Removed extractenator, which moved into its own package.
- Removed kernel-builder and kernel-tar, which moved into the new
  kernel-builder package.
- Removed firmwarenator, which moved into its own package.
- Removed microcodenator, which moved into its own package.
- Cleaned up initrd output, now completely quiet when `quiet` specified on
  kernel command line, added `verbose` for traditionally noisey output.
- Preload common modules needed for accessing fwdev.
- Copy host sytem modprobe config into initramfs.
- Don't append command line modprobe options to system modprobe config.
- Allow fwdev=DEV1,DEV2,... on command line.
- Put manpages back in initramfs.  We had been removing them to save space, but
  our initramfs is hopelessly large and super useful now... we might find
  ourselves wanted manpages.
- Added /etc/ruckusrd.conf and ~/.ruckusrd.conf config file support.
- Added libuuid, libblkid, fdisk, cfdisk, sfdisk, and blkid from util-linux
  to the initramfs because busybox fdisk didn't like manipilating GPTs.
- Added groff to the initramfs because the busybox man applet just wraps around
  it (i.e., it doesn't work unless you also have groff).